# Assembler

./: CMakeLists.txt  LICENSE  Makefile  README.md  a.out  assembbler_passes.c  assembbler_passes.h  assembler.c  assembler.h  assembler_passes.c  assembler_passes.h  error.c  error.h  main  main.c  main.h  new_file.c  output.c  output.h  preprocessor.c  preprocessor.h  processed_test_file.txt  ptf.ent  ptf.ext  ptf.ob  ptf.txt  settings.h  string_operations.c  string_operations.h  test_file.txt  utils.c  utils.h
